# sql-dump-anonymizer

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  bench.ps1  bench.sh  rules.toml
src/: cli.rs  config.rs  engine.rs  io.rs  lib.rs  main.rs
src/engine/: config.rs  mod.rs  strategy.rs
src/parser/: mod.rs  state.rs  tokenizer.rs
