[package]
name = "sql-dump-anonymizer"
version = "0.1.0"
edition = "2024"
authors = ["Carlos Eduardo Pinheiro <ce.pinheiros1@gmail.com>"]
license = "MIT OR Apache-2.0"

keywords = ["cli", "sql", "anonymization", "privacy", "stream"]

categories = ["command-line-utilities", "database", "cryptography"]

[dependencies]
clap = { version = "4.5.60", features = ["derive", "env"] }
dotenvy = "0.15.7"
